--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 name: Alfredo Electronics
 description: Engineering for the pathalogically competitive
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://AlfredoElectronics.github.io/images/alfredo1.jpg
 #
 # Flags below are optional
 #
