--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,52 @@ name: Alfredo Electronics
 description: Engineering for the pathalogically competitive
 avatar: https://AlfredoElectronics.github.io/images/alfredo1.jpg
 
-metadata:
-  _posts:
-    - name: "title"
-      field:
-        element: "text"
-        label: "title"
+# Prose.io Config
+prose:
+  metadata:
+    _posts:
+      - name: "published"
+        field:
+          element: "checkbox"
+          label: "Publish now"
+          help: "Keep this unchecked if you do not want to   publish the article right now"
+          value: "true"
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
+      - name: "title"
+        field:
+          element: "text"
+          label: "Enter title of the Article"
+          placeholder: "Enter Title"
+      - name: "date"
+        field:
+          element: "text"
+          label: "Date"
+          value: "CURRENT_DATETIME"
+      - name: "author"
+        field:
+          element: "hidden"
+          value: "Revanth Revoori"
+      - name: "categories"
+        field:
+          element: "hidden"
+          value: "blog"
+          alterable: "true"
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Add Tags"
+          placeholder: "Add Tags"
+          options:
+            - name: "Blog"
+              value: "blog"
+          alterable: true
+      - name: "excerpt_separator"
+        field:
+          element: "text"
+          value: "<!--more-->"
 
 # Includes an icon in the footer for each username you enter
 footer-links:
