--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ avatar: https://AlfredoElectronics.github.io/images/alfredo1.jpg
 
 # Prose.io Config
 prose:
+  media: 'assests/media'
   metadata:
     _posts:
       - name: "published"
