--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Alfredo Electronics
-description: \" Im allways right\"
+description: " Im allways right"
 avatar: https://AlfredoElectronics.github.io/images/alfredo1.jpg
 
 # Prose.io Config
