--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: BotSpace
 description: "Robots and more" #''Im always right''
-avatar: https://BotSpace.github.io/images/alfredo1.jpg
+avatar: https://BotSpace.github.io/images/pyrobotfinal.PNG
 
 # Prose.io Config
 prose:
