--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: BotSpace
-description: "Robots and more" #''Im always right''
+description: "Robots and More" #''Im always right''
 avatar: https://BotSpace.github.io/images/pyrobotfinal.PNG
 
 # Prose.io Config
